# Kimera-VIO-ROS

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  kalibr2sparkvio_stereo.py  package.xml
.github/ISSUE_TEMPLATE/: error-report.md
cfg/calib/: euroc_camchain.yaml
cfg/viz/: rqt_multiplot_diagnostics.xml  rqt_multiplot_state.xml  visualize_sparkvio.rviz
cfg/viz/archive/: rqt_multiplot_simulation.xml
docs/: hardware_setup.md  ros_installation.md
docs/Kalibr/: calibration.md  realsense_imu.yaml
include/: RosBaseDataSource.h  RosDataSource.h  RosbagDataSource.h  StereoImageBuffer.h
include/kimera-ros/: base-data-source.h  ros-data-source.h  rosbag-data-source.h  stereo-image-buffer.h
include/kimera-vio-ros/: base-data-source.h  ros-data-source.h  rosbag-data-source.h
include/kimera_ros/: RosBagDataProvider.h  RosDataProviderInterface.h  RosOnlineDataProvider.h  stereo-image-buffer.h
include/kimera_vio_ros/: KimeraVioNode.hpp  KimeraVioRos.h  LcdRegistrationServer.h  RosBagDataProvider.h  RosBagDataProvider.hpp  RosDataProviderInterface.h  RosDataProviderInterface.hpp  RosDisplay.h  RosLoopClosure.h  RosLoopClosureVisualizer.h  RosOnlineDataProvider.h  RosOnlineDataProvider.hpp  RosPublishers.h  RosVisualizer.h
include/kimera_vio_ros/utils/: CsvPublisher.h  UtilsRos.h
include/spark-vio-ros/: RosBaseDataSource.h  RosbagDataSource.h  base-data-source.h  ros-base-data-source.h  ros-data-source.h  rosbag-data-source.h  stereo-image-buffer.h
install/: kimera_ros.rosinstall  kimera_ros_https.rosinstall  kimera_ros_ssh.rosinstall  kimera_vio_ros.rosinstall  kimera_vio_ros_https.rosinstall  kimera_vio_ros_ssh.rosinstall  kimera_vioros_ssh.rosinstall  overlay.repos  ros.repos  spark_vio.rosinstall  underlay.repos
launch/: cam_info_yamlizer.launch  gt_logger.launch  gt_publisher.launch  kimera_ros.launch  kimera_ros_euroc.launch  kimera_ros_kitti.launch  kimera_ros_realsense.launch.xml  kimera_ros_tesse.launch  kimera_vio_d455.launch  kimera_vio_d457.launch  kimera_vio_eval.bash  kimera_vio_jackal.launch  kimera_vio_jackrabbot_tall_offline.launch  kimera_vio_jackrabbot_wide_offline.launch  kimera_vio_realsense_capture_offline.launch  kimera_vio_ros.launch  kimera_vio_ros.launch.xml  kimera_vio_ros_arl.launch  kimera_vio_ros_dcist.launch  kimera_vio_ros_euroc.launch  kimera_vio_ros_euroc_mono.launch  kimera_vio_ros_jackal.launch  kimera_vio_ros_kinect_azure.launch  kimera_vio_ros_kitti.launch  kimera_vio_ros_mynteye.launch  kimera_vio_ros_realsense_IR.launch  kimera_vio_ros_realsense_capture.launch  kimera_vio_ros_tesse.launch  kimera_vio_ros_uhumans1.launch  kimera_vio_ros_uhumans2.launch  kimera_vio_warty.launch  rs_d455_stereo.launch  spark_vio_ros.launch  spark_vio_ros_euroc.launch  spark_vio_ros_euroc_offline.launch  spark_vio_ros_kitti.launch  spark_vio_ros_kitti_offline.launch  spark_vio_ros_mynteye.launch  spark_vio_ros_mynteye_JPL_equi.launch  spark_vio_ros_mynteye_JPL_radtan.launch  (+10 more)
launch/realsense/: rs_capture_depth.launch  rs_capture_vio.launch
msg/: BowQuery.msg  BowVector.msg  VLCFrameMsg.msg
output_logs/: .gitignore
output_logs/arl/: .gitignore
param/: EuRoC_calibration.yaml
param/EuRoC/: LCDParameters.yaml  calibration.yaml  calibration_WRONG.yaml  regularVioParameters.yaml  ros-config.yaml  trackerParameters.yaml
param/EuRoC/flags/: Mesher.flags  StereoVIO.flags
param/Kitti/: calibration.yaml  regularVioParameters.yaml  ros-config.yaml  trackerParameters.yaml
param/Kitti/flags/: VioBackEnd.flags
param/MyntEye/: ros-config.yaml  trackerParameters.yaml
param/MyntEye/calibration/: calibration_JPL_equidistant.yaml  calibration_JPL_radtan.yaml  calibration_MIT_equidistant.yaml  calibration_MIT_radtan.yaml
param/MyntEye/flags/: StereoVIO.flags
param/MyntEye_JPL/: ros-config.yaml
param/MyntEye_JPL_equi/: ros-config.yaml
param/MyntEye_JPL_radtan/: ros-config.yaml
param/MyntEye_MIT_equi/flags/: StereoVIO.flags
param/MyntEye_MIT_radtan/: ros-config.yaml
param/MyntEye_fov/: calibration.yaml
param/MyntEye_fov/flags/: RegularVioBackEnd.flags
param/RealSenseIR/: LeftCameraParams.yaml  RightCameraParams.yaml
param/RealSense_IR/calibration/: calibration_MIT_info.yaml  calibration_MIT_radtan.yaml
param/RealSense_IR/flags/: StereoVIO.flags
param/TESS/: calibration.yaml  ros-config.yaml  trackerParameters.yaml
param/TESSE/: calibration.yaml  regularVioParameters.yaml  trackerParameters.yaml
param/tesse/: calibration.yaml  trackerParameters.yaml
rviz/: kimera_multi_rs_capture.rviz  kimera_vio_arl.rviz  kimera_vio_dcist.rviz  kimera_vio_euroc.rviz  kimera_vio_jackal.rviz  kimera_vio_jackrabbot_tall.rviz  kimera_vio_kinect_azure.rviz  kimera_vio_kitti.rviz  kimera_vio_rs_capture.rviz  kimera_vio_tesse.rviz  sense.rviz  spark_vio_euroc.rviz  spark_vio_tesse.rviz  sparkvio_euroc.rviz  sparkvio_kitti.rviz  sparkvio_tesse.rviz  temp.rviz  visualize_sparkvio.rviz
scripts/: camera_info_yamlizer_node.py  gt_logger_node.py  imu_logger_node.py  infra1_logger_node.py  infra2_logger_node.py  kimera_vio_eval.bash  reorder_bag.py  retimestamp_rosbag.py  rosbag_image_decompress.py  timestamps_logger_node.py  write_tfs_in_rosbag.py  write_traj_to_rosbag.bash
src/: KimeraVio.cpp  KimeraVioNode.cpp  KimeraVioRos.cpp  KimeraVioRosNode.cpp  LcdRegistrationServer.cpp  RosBagDataProvider.cpp  RosBaseDataSource.cpp  RosDataProvider.cpp  RosDataProviderInterface.cpp  RosDataSource.cpp  RosDisplay.cpp  RosLoopClosure.cpp  RosLoopClosureVisualizer.cpp  RosOnlineDataProvider.cpp  RosVisualizer.cpp  RosbagDataSource.cpp  StereoImageBuffer.cpp  base-data-source.cpp  ros-base-data-source.cpp  ros-data-source.cpp  rosbag-data-source.cpp  stereo-image-buffer.cpp  stereo-vio-ros.cpp  stereo.cpp  stereoVIOROS.cpp  stereoVIOROS_offline.cpp
src/utils/: CsvPublisher.cpp  CsvPublisherNode.cpp  UtilsRos.cpp
srv/: VLCFrameQuery.srv
test/: testKimeraVioRos.cpp  testRosBagDataProvider.cpp  testRosDataProviderInterface.cpp
viz/: rqt_multiplot_diagnostics.xml  rqt_multiplot_simulation.xml  rqt_multiplot_state.xml  test.sh  visualize_sparkvio.rviz
(+18 files in other folders)
