<?xml version="1.0"?>
<package format="2">
  <name>kimera_vio_ros</name>
  <version>4.0.0</version>
  <description>KimeraVIO ROS Wrapper</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>
  <maintainer email="mabate@mit.edu">Marcus Abate</maintainer>
  <maintainer email="arosinol@mit.edu">Antoni Rosinol</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- KimeraVIO needs opencv >= 3.3.1, yet ROS uses 3.2.0.
       Hacky way of avoiding error in KimeraVIO by linking to 3.4.2-->
  <depend>rclcpp</depend>

  <!-- <depend>roscpp</depend> -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <!-- <depend>rosbag</depend> -->
  <depend>cv_bridge</depend>
  <!-- <depend>tf</depend> -->
  <depend>pose_graph_msgs</depend>
  <depend>pose_graph_visualizer</depend>

  <depend>pcl_ros</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>

  <depend>kimera_vio</depend>
  <depend>libopencv-dev</depend>
  <depend>libgflags-dev</depend>
  <depend>libgoogle-glog-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
