<?xml version="1.0"?>
<package format="2">
  <name>kimera_vio_ros</name>
  <version>5.0.0</version>
  <description>KimeraVIO ROS Wrapper</description>

  <maintainer email="mabate@mit.edu">Marcus Abate</maintainer>
  <maintainer email="arosinol@mit.edu">Antoni Rosinol</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- KimeraVIO needs opencv >= 3.3.1, yet ROS uses 3.2.0.
       Hacky way of avoiding error in KimeraVIO by linking to 3.4.2-->
  <depend>opencv3_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>kimera_vio</depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <depend>rosbag</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>pose_graph_tools</depend>
  <depend>mesh_rviz_plugins</depend>

  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>

  <depend>pcl_ros</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>

  <test_depend>rosunit</test_depend>
</package>
